--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:weightSum="4"
-    android:layout_marginTop="200dp" android:layout_marginBottom="50dp"
+    android:layout_height="match_parent" android:weightSum="6"
+    android:layout_marginTop="150dp" android:layout_marginBottom="50dp"
     android:layout_marginLeft="75dp" android:layout_marginRight="75dp">
+
+    <TextView android:id="@+id/Logo"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="2"
+        android:text="GALACTIC BATTLE"
+        android:textAlignment="center"
+        android:fontFamily="cursive"
+        android:textColor="@android:color/holo_purple">
+    </TextView>
 
     <Button android:id="@+id/GameButton"
         android:layout_height="match_parent"
