Fixed Gradle sync problems, Added activities

--- a/app/src/main/res/layout/activity_find_players_activity.xml
+++ b/app/src/main/res/layout/activity_find_players_activity.xml
@@ -29,7 +29,8 @@
         android:layout_marginLeft="20dp"
         android:layout_weight="2"
         android:text="There are no players nearby"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:background="@color/backgroundGray"/>
 
 
     <Button android:id="@+id/GoButton"
