Added touch screen

--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -27,6 +27,7 @@
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/tapScreen" />
+        android:id="@+id/tapScreen"
+        android:background="@null"/>
 
 </RelativeLayout>
