bullet logic hitting

--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -12,7 +12,8 @@
         android:src="@drawable/spaceship"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/enemyShip"
-        android:layout_alignStart="@+id/enemyShip" />
+        android:layout_alignStart="@+id/enemyShip"
+        />
 
     <ImageView
         android:layout_width="300px"
