--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,16 +5,13 @@
     android:layout_marginTop="150dp" android:layout_marginBottom="50dp"
     android:layout_marginLeft="75dp" android:layout_marginRight="75dp">
 
-    <TextView android:id="@+id/Logo"
+    <ImageView android:id="@+id/Logo"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_marginBottom="50dp"
         android:layout_weight="2"
-        android:text="GALACTIC BATTLE"
-        android:textAlignment="center"
-        android:fontFamily="cursive"
-        android:textColor="@android:color/holo_purple">
-    </TextView>
+        android:src="@drawable/logo">
+    </ImageView>
 
     <Button android:id="@+id/GameButton"
         android:layout_height="match_parent"
