--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:weightSum="6">
+    android:layout_height="match_parent" android:weightSum="8"
+    android:layout_marginTop="150dp" android:layout_marginBottom="50dp"
+    android:layout_marginLeft="75dp" android:layout_marginRight="75dp">
 
     <TextView
         android:id="@+id/endOutcome"
@@ -13,5 +15,21 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:text="Play Again"
+        android:onClick="playAgain"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:text="Go Back To Find Players"
+        android:onClick="findPlayers"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:text="Go To Home Screen"
+        android:onClick="homeScreen"/>
+
+
 </LinearLayout>
