--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:weightSum="6"
+    android:layout_height="match_parent" android:weightSum="8"
     android:layout_marginTop="150dp" android:layout_marginBottom="50dp"
     android:layout_marginLeft="75dp" android:layout_marginRight="75dp">
 
@@ -13,11 +13,19 @@
         android:src="@drawable/logo">
     </ImageView>
 
+    <Button
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_weight="2"
+        android:text="Campaign"
+        android:onClick="campaign">
+    </Button>
+
     <Button android:id="@+id/GameButton"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_weight="2"
-        android:text="Find Players"
+        android:text="Versus"
         android:onClick="searchPlayers">
     </Button>
 
