--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/endScreen"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:weightSum="8"
     android:layout_marginTop="150dp" android:layout_marginBottom="50dp"
-    android:layout_marginLeft="75dp" android:layout_marginRight="75dp">
+    android:layout_marginLeft="75dp" android:layout_marginRight="75dp"
+    >
 
     <TextView
         android:id="@+id/endOutcome"
+        android:textColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
