--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:weightSum="6"
+    android:background="@color/black">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/endScreen"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:weightSum="8"
@@ -36,4 +40,5 @@
         android:onClick="homeScreen"/>
 
 
+</LinearLayout>
 </LinearLayout>
