--- a/app/src/main/res/layout/activity_find_players_activity.xml
+++ b/app/src/main/res/layout/activity_find_players_activity.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:weightSum="6"
-    android:background="@color/black">
+    android:layout_height="match_parent" android:weightSum="6">
 
     <TextView android:id="@+id/FindTitle"
         android:layout_width="match_parent"
