--- a/app/src/main/res/layout/activity_campaign.xml
+++ b/app/src/main/res/layout/activity_campaign.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:id="@+id/layout">
+    android:id="@+id/layoutC">
 
     <ImageView
         android:scaleType="fitCenter"
